<resources>
    <string name="app_name">GuiderM500</string>
    <string name="kaishiceliang">Start measuring</string>

    <string name="next">Next</string>
    <string name="custom_next">Next</string>
    <string name="end_measurement">End measurement</string>
    <string name="remeasure">Remeasure</string>
    <string name="print_report">Print report</string>

    <string name="blood_sugar">Blood sugar</string>
    <string name="blood_flow">Blood flow velocity</string>
    <string name="blood_oxygen">Blood oxygen concentration</string>
    <string name="glu_tips">Remind you to maintain good eating habits, maintain regular exercise, and regularly measure blood sugar.</string>

    <!--心电 心率 饮酒风险 精神压力 情绪变化 体脂率 -->

    <string name="choose_device">Select a measurement device</string>
    <string name="choose_tips_pre">You have selected</string>
    <string name="choose_tips_tail"> devices for the following measurements!</string>
    <string name="no_network_tips">No network, please open the network!</string>

    <string name="normal">Normal</string>
    <string name="abnormal">Abnormal</string>

    <string name="request_per">Request permission to open, otherwise it cannot be used normally!</string>

    <string name="measurement_results">Measurement results</string>


    <string name="glu">Blood sugar</string>
    <string name="test_result">Results</string>
    <string name="fora_glu_reminder_title">Measurement tips</string>
    <string name="fora_glu_tips">1. Press the long M key to turn on the machine \n \n2. Please insert the test paper into the slot after sucking blood \n \n3. Please slide the left button to turn on the Bluetooth, and the blue light on the upper left corner is on</string>
    <string name="start_test">Start measuring</string>
    <string name="fora_glu_start_tips">Measurement starts</string>
    <string name="restart_test">Restart measurement</string>
    <string name="fora_glu_reult_format">Your blood sugar value：\n%.2f </string>
    <string name="fora_glu_redult_title">Measurement results</string>

    <string name="fora_bo_reminder_title">Measurement Tips</string>
    <string name="fora_bo_reult_format">Your blood oxygen value：\n%d </string>
    <string name="fora_bo_tips">1. Press the power button on the right to turn on\n\n2. Please put your finger into the blood oxygen clip\n\n3. When the value appears on the screen, please click the \"Start Measurement\" button below</string>
    <string name="fora_bo_redult_title">Measurement Results</string>

    <string name="fora_et_reminder_title">Measurement Tips</string>
    <string name="fora_et_reult_format">Your body temp value：\n%.2f°C</string>
    <string name="fora_et_tips">1. Press the button at the bottom of the screen to power on\n\n2. Press the button on the back of the ear thermometer to determine the temperature\n\n3. When you hear the sound, click the \"Start Measurement\" button below</string>
    <string name="fora_et_redult_title">Measurement Results</string>

    <string name="medcheck_glu_reminder_title">Measurement Tips</string>
    <string name="medcheck_glu_reult_format">Your blood glucose value：\n%.2f</string>
    <string name="medcheck_glu_tips">1. Insert the test strip in the direction indicated by the arrow and turn it on automatically.\n2. Confirm that the code number of the test paper on the screen matches the test paper box.\n3. Use a blood collection pen to obtain a fingertip blood sample.\n4. The test strips draw blood samples.\n5. Measurement data appears after the screen countdown ends.\n\n6. Click "Save Data" and the measurement data will be stored in the system platform.\n7. Withdraw the test paper and discard into the biochemical pollutant container.</string>
    <string name="medcheck_glu_redult_title">Measurement Results</string>

    <string name="medcheck_pre_reminder_title">Measurement Tips</string>
    <string name="medcheck_pre_tips">1. Connect the cuff to the blood pressure meter correctly, expose your arms, palm up, and straighten your elbows, and put on the cuff.\n2. The cuff trachea points to the lower arm, and the lower edge of the cuff is 2–3cm away from the elbow socket.\n3. Place the cuff hose at the pulse point of the brachial artery.\n4. Sit still for 3 minutes before the measurement, keeping the center of the cuff at the same height as the heart.\n5. Press the [Power] button to start measurement.\n6. Please do not speak or move your body during the measurement.\n7. After the measurement is completed, when the value appears on the screen, please click the [Save Data] button below.</string>
    <string name="medcheck_pre_redult_title">Measurement Results</string>

    <string name="sbp_with_">Systolic pressure(mmHg) :</string>
    <string name="dbp_with_">Diastolic pressure(mmHg) :</string>

    <string name="bmp1000_dy">Low voltage</string>
        
    <string name="bmp1000_gy">High voltage</string>

    <string name="bmp1000_range">Reference range: the general population:  systolic blood pressure&lt;120(mmHg), diastolic blood pressure&lt;80 mmHg)\n                    Chronic disease, the elderly: systolic blood pressure&lt;140 (mmHg), diastolic pressure&lt;90(mmHg)</string>

    <string name="food_time1">fasting in the morning</string>
        
    <string name="food_time2">2 hours after meal</string>

    <string name="ear_temp">ear temp</string>
    <string name="save_data">Save Data</string>
    <string name="blood_pressure">blood pressure</string>
    <string name="ecg_ecg_suggest1">Control the three highs (high blood fat, high blood pressure, high blood sugar), maintain good habits and control weight, help maintain the health of blood vessels and reduce excess work in the heart.</string>

    <string name="common_temp_suggest_36">Please exercise more, pay attention to keep warm and strengthen nutrition</string>
    <string name="common_temp_suggest_36_37_2">The body temperature is normal, please continue to maintain it</string>
    <string name="common_temp_suggest_37_3_38">Please cool down physically, drink plenty of water, eat more fruits and vegetables, or take antipyretics as directed by your doctor</string>
    <string name="common_temp_suggest_38_1_39">Please cool down physically, drink plenty of water, pay attention to changes in body temperature, and seek medical treatment in a timely manner according to the situation</string>
    <string name="common_temp_suggest_39_1_41">Please consult a doctor in time for treatment</string>
    <string name="common_temp_suggest_41">May be life-threatening, please seek medical treatment as soon as possible</string>

    <string name="common_bo_suggest_90">Oxygen saturation is normal, please pay attention to keep it</string>
    <string name="common_bo_suggest_80_89">Please reduce activities and take appropriate breaks</string>
    <string name="common_bo_suggest_70_79">Please take appropriate amount of oxygen and take anti-hypoxic drugs as directed by your doctor</string>
    <string name="common_bo_suggest_60_69">Please stop all activities and seek medical attention immediately</string>
    <string name="common_bo_suggest_59">May be life-threatening, please seek medical treatment as soon as possible</string>


    <string name="zangyin">Visceral sound detection</string>

    <string name="dmyh">Arteriosclerosis measurement</string>
    <string name="sbp">SBP</string>
    <string name="dbp">DBP</string>
    <string name="heart_rate">Heart rate</string>
    <string name="dmyh_suggest">It is recommended that you pay attention to adjusting your diet, controlling your weight, maintaining regular exercise, taking your blood pressure regularly, and keeping you happy.</string>

    <string name="bp">Blood pressure</string>

    <string name="ecg">ECG</string>
    <string name="heart_rate_health">Heart rate health</string>
    <string name="stress_index">Stress index</string>
    <string name="tired_index">Fatigue index</string>

    <string name="result">Conclusion</string>

    <string name="drinking_risk">Drinking risk</string>
    <string name="mental_stress">Mental stress</string>
    <string name="mood_change">Mood change</string>
    <string name="body_fat">Body fat rate</string>

    <string name="blood_speed">Blood flow velocity</string>
    <string name="hemoglobin">Hemoglobin</string>
    <string name="bo">Blood oxygen</string>
    <string name="bs_suggest">Remind you to maintain good eating habits, maintain regular exercise, and regularly measure blood sugar.</string>

    <string name="dmyh_index">Arteriosclerosis index</string>

    <string name="talk_to_doctor">Talk to doctor</string>
    <string name="common_m_retest">Remeasure</string>
</resources>
