<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_all"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/device_head" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/myBodyLayout"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_100"
                android:layout_marginBottom="@dimen/dp_10"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_13"
                    android:layout_marginTop="@dimen/dp_6"
                    android:background="@mipmap/logon_guider" />

                <TextView
                    android:id="@+id/tv_test_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:text="@string/glu"
                    android:textColor="#ACACAC"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:text=">"
                    android:textColor="#ACACAC"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:text="@string/test_result"
                    android:textColor="#F18937"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_fora_glu_reslut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/test_result"
                android:textSize="@dimen/sp_30" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_30"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_fora_glu_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:background="@drawable/button_cancel"
                    android:paddingLeft="@dimen/dp_30"
                    android:paddingRight="@dimen/dp_30"
                    android:text="@string/custom_next"
                    android:textColor="#FAFCFF"
                    android:textSize="@dimen/sp_25" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
